# binSpector

./: .ackrc  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  binSpector.pro  binspector.sublime-project  binspector.sublime-workspace  main.cpp  moc_basicInfo.cpp  moc_binspector.cpp  moc_callGraph.cpp  moc_clangHighlighter.cpp  moc_codeEditor.cpp  moc_controlAndDataFlowGraph.cpp  moc_controlFlowGraph.cpp  moc_help.cpp  moc_llvmHighlighter.cpp  moc_llvm_ir.cpp  moc_memoryAllocation.cpp  qrc_style.cpp
binSpector.app.dSYM/Contents/: Info.plist
binSpector.app.dSYM/Contents/Resources/DWARF/: binSpector
binSpector.app/Contents/: Info.plist
binSpector.app/Contents/MacOS/: binSpector
control/codeEditor/: codeEditor.cpp  codeEditor.h
control/disassembler/: disassembler.h
control/syntax/clang/: clangHighlighter.cpp  clangHighlighter.h
control/syntax/llvm_ir/: llvmHighlighter.cpp  llvmHighlighter.h
docs/: CMakeLists.txt  Doxyfile.in
documentation/: Doxyfile
html/: _r_e_a_d_m_e_8md.html  annotated.html  basic_info_8cpp.html  basic_info_8cpp__incl.map  basic_info_8cpp__incl.md5  basic_info_8h.html  basic_info_8h__dep__incl.map  basic_info_8h__dep__incl.md5  basic_info_8h__incl.map  basic_info_8h__incl.md5  basic_info_8h_source.html  binspector_8cpp.html  binspector_8cpp__incl.map  binspector_8cpp__incl.md5  binspector_8h.html  binspector_8h__dep__incl.map  binspector_8h__dep__incl.md5  binspector_8h__incl.map  binspector_8h__incl.md5  binspector_8h_source.html  call_graph_8cpp.html  call_graph_8cpp__incl.map  call_graph_8cpp__incl.md5  call_graph_8h.html  call_graph_8h__dep__incl.map  call_graph_8h__dep__incl.md5  call_graph_8h__incl.map  call_graph_8h__incl.md5  call_graph_8h_source.html  clang_highlighter_8cpp.html  clang_highlighter_8cpp__incl.map  clang_highlighter_8cpp__incl.md5  clang_highlighter_8h.html  clang_highlighter_8h__dep__incl.map  clang_highlighter_8h__dep__incl.md5  clang_highlighter_8h__incl.map  clang_highlighter_8h__incl.md5  clang_highlighter_8h_source.html  classcontrol_1_1_line_number_area-members.html  classcontrol_1_1_line_number_area.html  (+209 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  namespaces_1.js  search.js  variables_0.js  variables_1.js  variables_2.js  (+3 more)
include/control/: Disassembler.h
include/control/codeEditor/: codeEditor.h
include/control/disassembler/: Disassembler.h
include/control/syntax/clang/: clangHighlighter.h
include/control/syntax/llvm_ir/: llvmHighlighter.h
include/control/syntax/markdown/: MarkdownHighlighter.h
include/view/: binspector.h  guiFunctions.h
include/view/binary/: basicInfo.h
include/view/mainWidget/: codeViewer.h  help.h
include/view/mainWidget/code/: code.h
include/view/mainWidget/help/: help.h
include/view/visualizer/: callGraph.h  controlAndDataFlowGraph.h  memoryDependence.h
include/view/visualizer/controlFlowGraph/: controlFlowGraph.h
include/view/visualizer/memoryAllocation/: memoryAllocation.h
lib/: CMakeLists.txt
lib/control/: Disassembler.cpp  codeEditor.cpp
lib/control/codeEditor/: codeEditor.cpp
lib/control/disassembler/: Disassembler.cpp
lib/control/syntax/: clangHighlighter.cpp
lib/control/syntax/clang/: clangHighlighter.cpp
lib/control/syntax/llvm_ir/: llvmHighlighter.cpp
lib/control/syntax/markdown/: MarkdownHighlighter.cpp  MarkdownHighlighter.py.txt
lib/view/: binspector.cpp  guiFunctions.cpp
lib/view/binary/: basicInfo.cpp
lib/view/mainWidget/: codeViewer.cpp  help.cpp
lib/view/mainWidget/code/: code.cpp
lib/view/mainWidget/help/: help.cpp
lib/view/visualizer/: callGraph.cpp  controlAndDataFlowGraph.cpp  controlFlowGraph.cpp  memoryDependence.cpp
lib/view/visualizer/callGraph/: callGraph.cpp
lib/view/visualizer/controlAndDataFlowGraph/: controlAndDataFlowGraph.cpp
lib/view/visualizer/controlFlowGraph/: controlFlowGraph.cpp
lib/view/visualizer/memoryAllocation/: memoryAllocation.cpp
tools/binSpector/: CMakeLists.txt  main.cpp  main.h
view/: binspector.cpp  binspector.h  guiFunctions.cpp
view/binary/: basicInfo.cpp  basicInfo.h
view/mainWidget/help/: help.cpp  help.h
view/mainWidget/llvm_ir/: llvm_ir.cpp  llvm_ir.h
view/visualizer/callGraph/: callGraph.cpp  callGraph.h
view/visualizer/controlAndDataFlowGraph/: controlAndDataFlowGraph.cpp  controlAndDataFlowGraph.h
view/visualizer/controlFlowGraph/: controlFlowGraph.cpp  controlFlowGraph.h
view/visualizer/memoryAllocation/: memoryAllocation.cpp  memoryAllocation.h
